// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup component tests Radio not direct child of radio group 1`] = `
<View
  accessibilityLabel="Uncontrolled RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    {
      "disabled": false,
      "required": false,
    }
  }
  accessible={true}
  defaultValue="key2"
  style={
    {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        {
          "color": "#242424",
          "fontFamily": "Segoe UI",
          "fontSize": 13,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Uncontrolled RadioGroup
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
      }
    }
  >
    <View
      accessibilityActions={
        [
          {
            "name": "Select",
          },
        ]
      }
      accessibilityLabel="Radio1"
      accessibilityPositionInSet={1}
      accessibilityRole="radio"
      accessibilitySetSize={2}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      enableFocusRing={true}
      focusable={true}
      labelPosition="after"
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": -2829100,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": undefined,
          "paddingVertical": undefined,
        }
      }
      value="key1"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={false}
        nativeBackgroundAndroid={
          {
            "borderless": true,
            "color": -2829100,
            "rippleRadius": 16,
            "type": "RippleAndroid",
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderColor": "#616161",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 20,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 4,
            "marginRight": 4,
            "marginTop": 4,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": undefined,
              "borderRadius": 5,
              "height": 10,
              "opacity": 0,
              "width": 10,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "marginLeft": 16,
            "marginRight": undefined,
            "padding": 2,
            "paddingRight": 0,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={0}
          style={
            {
              "color": "#242424",
              "fontFamily": "Segoe UI",
              "fontSize": 13,
              "fontWeight": "400",
              "margin": 0,
              "marginHorizontal": 2,
            }
          }
        >
          Radio1
        </Text>
      </View>
    </View>
    <View
      accessibilityActions={
        [
          {
            "name": "Select",
          },
        ]
      }
      accessibilityLabel="Radio2"
      accessibilityPositionInSet={2}
      accessibilityRole="radio"
      accessibilitySetSize={2}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      enableFocusRing={true}
      focusable={true}
      labelPosition="after"
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": -2829100,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": undefined,
          "paddingVertical": undefined,
        }
      }
      value="key2"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={false}
        nativeBackgroundAndroid={
          {
            "borderless": true,
            "color": -2829100,
            "rippleRadius": 16,
            "type": "RippleAndroid",
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderColor": "#0f6cbd",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 20,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 4,
            "marginRight": 4,
            "marginTop": 4,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#0f6cbd",
              "borderRadius": 5,
              "height": 10,
              "opacity": 1,
              "width": 10,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "marginLeft": 16,
            "marginRight": undefined,
            "padding": 2,
            "paddingRight": 0,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={0}
          style={
            {
              "color": "#242424",
              "fontFamily": "Segoe UI",
              "fontSize": 13,
              "fontWeight": "400",
              "margin": 0,
              "marginHorizontal": 2,
            }
          }
        >
          Radio2
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`RadioGroup component tests RadioGroup default 1`] = `
<View
  accessibilityLabel="Uncontrolled RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    {
      "disabled": false,
      "required": false,
    }
  }
  accessible={true}
  defaultValue="key2"
  style={
    {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        {
          "color": "#242424",
          "fontFamily": "Segoe UI",
          "fontSize": 13,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Uncontrolled RadioGroup
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
      }
    }
  >
    <View
      accessibilityActions={
        [
          {
            "name": "Select",
          },
        ]
      }
      accessibilityLabel="RadioButton1"
      accessibilityPositionInSet={0}
      accessibilityRole="radio"
      accessibilitySetSize={0}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      enableFocusRing={true}
      focusable={true}
      labelPosition="after"
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": -2829100,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": undefined,
          "paddingVertical": undefined,
        }
      }
      value="key1"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={false}
        nativeBackgroundAndroid={
          {
            "borderless": true,
            "color": -2829100,
            "rippleRadius": 16,
            "type": "RippleAndroid",
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderColor": "#616161",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 20,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 4,
            "marginRight": 4,
            "marginTop": 4,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": undefined,
              "borderRadius": 5,
              "height": 10,
              "opacity": 0,
              "width": 10,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "marginLeft": 16,
            "marginRight": undefined,
            "padding": 2,
            "paddingRight": 0,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={0}
          style={
            {
              "color": "#242424",
              "fontFamily": "Segoe UI",
              "fontSize": 13,
              "fontWeight": "400",
              "margin": 0,
              "marginHorizontal": 2,
            }
          }
        >
          RadioButton1
        </Text>
      </View>
    </View>
    <View
      accessibilityActions={
        [
          {
            "name": "Select",
          },
        ]
      }
      accessibilityLabel="RadioButton2"
      accessibilityPositionInSet={0}
      accessibilityRole="radio"
      accessibilitySetSize={0}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      enableFocusRing={true}
      focusable={true}
      labelPosition="after"
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": -2829100,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": undefined,
          "paddingVertical": undefined,
        }
      }
      value="key2"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={false}
        nativeBackgroundAndroid={
          {
            "borderless": true,
            "color": -2829100,
            "rippleRadius": 16,
            "type": "RippleAndroid",
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderColor": "#0f6cbd",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 20,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 4,
            "marginRight": 4,
            "marginTop": 4,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#0f6cbd",
              "borderRadius": 5,
              "height": 10,
              "opacity": 1,
              "width": 10,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "marginLeft": 16,
            "marginRight": undefined,
            "padding": 2,
            "paddingRight": 0,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={0}
          style={
            {
              "color": "#242424",
              "fontFamily": "Segoe UI",
              "fontSize": 13,
              "fontWeight": "400",
              "margin": 0,
              "marginHorizontal": 2,
            }
          }
        >
          RadioButton2
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`RadioGroup component tests RadioGroup disabled 1`] = `
<View
  accessibilityLabel="Disabled RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    {
      "disabled": true,
      "required": false,
    }
  }
  accessible={true}
  disabled={true}
  style={
    {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        {
          "color": "#bdbdbd",
          "fontFamily": "Segoe UI",
          "fontSize": 13,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Disabled RadioGroup
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
      }
    }
  >
    <View
      accessibilityActions={
        [
          {
            "name": "Select",
          },
        ]
      }
      accessibilityLabel="Radio1"
      accessibilityPositionInSet={1}
      accessibilityRole="radio"
      accessibilitySetSize={2}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      enableFocusRing={true}
      focusable={false}
      labelPosition="after"
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": -2829100,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": undefined,
          "paddingVertical": undefined,
        }
      }
      value="key1"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={false}
        nativeBackgroundAndroid={
          {
            "borderless": true,
            "color": -2829100,
            "rippleRadius": 16,
            "type": "RippleAndroid",
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderColor": "#e0e0e0",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 20,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 4,
            "marginRight": 4,
            "marginTop": 4,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": undefined,
              "borderRadius": 5,
              "height": 10,
              "opacity": 0,
              "width": 10,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "marginLeft": 16,
            "marginRight": undefined,
            "padding": 2,
            "paddingRight": 0,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={0}
          style={
            {
              "color": "#bdbdbd",
              "fontFamily": "Segoe UI",
              "fontSize": 13,
              "fontWeight": "400",
              "margin": 0,
              "marginHorizontal": 2,
            }
          }
        >
          Radio1
        </Text>
      </View>
    </View>
    <View
      accessibilityActions={
        [
          {
            "name": "Select",
          },
        ]
      }
      accessibilityLabel="Radio2"
      accessibilityPositionInSet={2}
      accessibilityRole="radio"
      accessibilitySetSize={2}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={false}
      collapsable={false}
      enableFocusRing={true}
      focusable={false}
      labelPosition="after"
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": -2829100,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": undefined,
          "paddingVertical": undefined,
        }
      }
      value="key2"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={false}
        nativeBackgroundAndroid={
          {
            "borderless": true,
            "color": -2829100,
            "rippleRadius": 16,
            "type": "RippleAndroid",
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderColor": "#e0e0e0",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 20,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 4,
            "marginRight": 4,
            "marginTop": 4,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": undefined,
              "borderRadius": 5,
              "height": 10,
              "opacity": 0,
              "width": 10,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "marginLeft": 16,
            "marginRight": undefined,
            "padding": 2,
            "paddingRight": 0,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={0}
          style={
            {
              "color": "#bdbdbd",
              "fontFamily": "Segoe UI",
              "fontSize": 13,
              "fontWeight": "400",
              "margin": 0,
              "marginHorizontal": 2,
            }
          }
        >
          Radio2
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`RadioGroup component tests RadioGroup horizontal 1`] = `
<View
  accessibilityLabel="Horizontal RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    {
      "disabled": false,
      "required": false,
    }
  }
  accessible={true}
  defaultValue="key2"
  layout="horizontal"
  style={
    {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        {
          "color": "#242424",
          "fontFamily": "Segoe UI",
          "fontSize": 13,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Horizontal RadioGroup
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
      }
    }
  >
    <View
      accessibilityActions={
        [
          {
            "name": "Select",
          },
        ]
      }
      accessibilityLabel="Radio1"
      accessibilityPositionInSet={1}
      accessibilityRole="radio"
      accessibilitySetSize={2}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      enableFocusRing={true}
      focusable={true}
      labelPosition="after"
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": -2829100,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": undefined,
          "paddingVertical": undefined,
        }
      }
      value="key1"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={false}
        nativeBackgroundAndroid={
          {
            "borderless": true,
            "color": -2829100,
            "rippleRadius": 16,
            "type": "RippleAndroid",
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderColor": "#616161",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 20,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 4,
            "marginRight": 4,
            "marginTop": 4,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": undefined,
              "borderRadius": 5,
              "height": 10,
              "opacity": 0,
              "width": 10,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "marginLeft": 16,
            "marginRight": undefined,
            "padding": 2,
            "paddingRight": 0,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={0}
          style={
            {
              "color": "#242424",
              "fontFamily": "Segoe UI",
              "fontSize": 13,
              "fontWeight": "400",
              "margin": 0,
              "marginHorizontal": 2,
            }
          }
        >
          Radio1
        </Text>
      </View>
    </View>
    <View
      accessibilityActions={
        [
          {
            "name": "Select",
          },
        ]
      }
      accessibilityLabel="Radio2"
      accessibilityPositionInSet={2}
      accessibilityRole="radio"
      accessibilitySetSize={2}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      enableFocusRing={true}
      focusable={true}
      labelPosition="after"
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": -2829100,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": undefined,
          "paddingVertical": undefined,
        }
      }
      value="key2"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={false}
        nativeBackgroundAndroid={
          {
            "borderless": true,
            "color": -2829100,
            "rippleRadius": 16,
            "type": "RippleAndroid",
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderColor": "#0f6cbd",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 20,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 4,
            "marginRight": 4,
            "marginTop": 4,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#0f6cbd",
              "borderRadius": 5,
              "height": 10,
              "opacity": 1,
              "width": 10,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "marginLeft": 16,
            "marginRight": undefined,
            "padding": 2,
            "paddingRight": 0,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={0}
          style={
            {
              "color": "#242424",
              "fontFamily": "Segoe UI",
              "fontSize": 13,
              "fontWeight": "400",
              "margin": 0,
              "marginHorizontal": 2,
            }
          }
        >
          Radio2
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`RadioGroup component tests RadioGroup horizontal-stacked 1`] = `
<View
  accessibilityLabel="Horizontal-Stacked RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    {
      "disabled": false,
      "required": false,
    }
  }
  accessible={true}
  defaultValue="key2"
  layout="horizontal-stacked"
  style={
    {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        {
          "color": "#242424",
          "fontFamily": "Segoe UI",
          "fontSize": 13,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Horizontal-Stacked RadioGroup
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
      }
    }
  >
    <View
      accessibilityActions={
        [
          {
            "name": "Select",
          },
        ]
      }
      accessibilityLabel="Radio1"
      accessibilityPositionInSet={1}
      accessibilityRole="radio"
      accessibilitySetSize={2}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      enableFocusRing={true}
      focusable={true}
      labelPosition="below"
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": -2829100,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "paddingHorizontal": undefined,
          "paddingVertical": undefined,
        }
      }
      value="key1"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={false}
        nativeBackgroundAndroid={
          {
            "borderless": true,
            "color": -2829100,
            "rippleRadius": 16,
            "type": "RippleAndroid",
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderColor": "#616161",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 20,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 0,
            "marginRight": 4,
            "marginTop": 4,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": undefined,
              "borderRadius": 5,
              "height": 10,
              "opacity": 0,
              "width": 10,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "marginLeft": 16,
            "marginRight": undefined,
            "padding": 2,
            "paddingRight": 0,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={0}
          style={
            {
              "color": "#242424",
              "fontFamily": "Segoe UI",
              "fontSize": 13,
              "fontWeight": "400",
              "margin": 0,
              "marginHorizontal": 2,
            }
          }
        >
          Radio1
        </Text>
      </View>
    </View>
    <View
      accessibilityActions={
        [
          {
            "name": "Select",
          },
        ]
      }
      accessibilityLabel="Radio2"
      accessibilityPositionInSet={2}
      accessibilityRole="radio"
      accessibilitySetSize={2}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      enableFocusRing={true}
      focusable={true}
      labelPosition="below"
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": -2829100,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "paddingHorizontal": undefined,
          "paddingVertical": undefined,
        }
      }
      value="key2"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={false}
        nativeBackgroundAndroid={
          {
            "borderless": true,
            "color": -2829100,
            "rippleRadius": 16,
            "type": "RippleAndroid",
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderColor": "#0f6cbd",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 20,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 0,
            "marginRight": 4,
            "marginTop": 4,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#0f6cbd",
              "borderRadius": 5,
              "height": 10,
              "opacity": 1,
              "width": 10,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "marginLeft": 16,
            "marginRight": undefined,
            "padding": 2,
            "paddingRight": 0,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={0}
          style={
            {
              "color": "#242424",
              "fontFamily": "Segoe UI",
              "fontSize": 13,
              "fontWeight": "400",
              "margin": 0,
              "marginHorizontal": 2,
            }
          }
        >
          Radio2
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`RadioGroup component tests RadioGroup required 1`] = `
<View
  accessibilityLabel="Required RadioGroup"
  accessibilityRole="radiogroup"
  accessibilityState={
    {
      "disabled": false,
      "required": true,
    }
  }
  accessible={true}
  defaultValue="key2"
  style={
    {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        {
          "color": "#242424",
          "fontFamily": "Segoe UI",
          "fontSize": 13,
          "fontWeight": "600",
          "margin": 0,
        }
      }
    >
      Required RadioGroup
    </Text>
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        {
          "color": "#750b1c",
          "fontFamily": "Segoe UI",
          "fontSize": 13,
          "fontWeight": "600",
          "margin": 0,
          "paddingStart": 2,
        }
      }
    >
      *
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-around",
      }
    }
  >
    <View
      accessibilityActions={
        [
          {
            "name": "Select",
          },
        ]
      }
      accessibilityLabel="Radio1"
      accessibilityPositionInSet={1}
      accessibilityRole="radio"
      accessibilitySetSize={2}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": false,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      enableFocusRing={true}
      focusable={true}
      labelPosition="after"
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": -2829100,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": undefined,
          "paddingVertical": undefined,
        }
      }
      value="key1"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={false}
        nativeBackgroundAndroid={
          {
            "borderless": true,
            "color": -2829100,
            "rippleRadius": 16,
            "type": "RippleAndroid",
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderColor": "#616161",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 20,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 4,
            "marginRight": 4,
            "marginTop": 4,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": undefined,
              "borderRadius": 5,
              "height": 10,
              "opacity": 0,
              "width": 10,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "marginLeft": 16,
            "marginRight": undefined,
            "padding": 2,
            "paddingRight": 0,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={0}
          style={
            {
              "color": "#242424",
              "fontFamily": "Segoe UI",
              "fontSize": 13,
              "fontWeight": "400",
              "margin": 0,
              "marginHorizontal": 2,
            }
          }
        >
          Radio1
        </Text>
      </View>
    </View>
    <View
      accessibilityActions={
        [
          {
            "name": "Select",
          },
        ]
      }
      accessibilityLabel="Radio2"
      accessibilityPositionInSet={2}
      accessibilityRole="radio"
      accessibilitySetSize={2}
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": true,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      enableFocusRing={true}
      focusable={true}
      labelPosition="after"
      nativeBackgroundAndroid={
        {
          "borderless": false,
          "color": -2829100,
          "rippleRadius": undefined,
          "type": "RippleAndroid",
        }
      }
      onAccessibilityAction={[Function]}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": undefined,
          "paddingVertical": undefined,
        }
      }
      value="key2"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={false}
        collapsable={false}
        focusable={false}
        nativeBackgroundAndroid={
          {
            "borderless": true,
            "color": -2829100,
            "rippleRadius": 16,
            "type": "RippleAndroid",
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": undefined,
            "borderColor": "#0f6cbd",
            "borderRadius": 10,
            "borderStyle": "solid",
            "borderWidth": 1.5,
            "height": 20,
            "justifyContent": "center",
            "marginBottom": 4,
            "marginLeft": 4,
            "marginRight": 4,
            "marginTop": 4,
            "width": 20,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#0f6cbd",
              "borderRadius": 5,
              "height": 10,
              "opacity": 1,
              "width": 10,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignItems": undefined,
            "flexDirection": "column",
            "marginLeft": 16,
            "marginRight": undefined,
            "padding": 2,
            "paddingRight": 0,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={0}
          style={
            {
              "color": "#242424",
              "fontFamily": "Segoe UI",
              "fontSize": 13,
              "fontWeight": "400",
              "margin": 0,
              "marginHorizontal": 2,
            }
          }
        >
          Radio2
        </Text>
      </View>
    </View>
  </View>
</View>
`;
